dataset1235/2025-2/2947369575/users/574296883/executions/3873599344_2416501300.log
== SUBMISSION (2025-08-20 22:38:28)
-- CODE: 
print("*****")
print("***")
print("*")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:38:26)
-- CODE: 
print("*****")
print("***")
print("*")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:38:04)
-- CODE: 
  print("*****")
print("***")
print("*")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:38:02)
-- CODE: 
  print("*****")
print("***")
print("*")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
